created python script, fixed bugs, typing and added comments

--- a/src/SateliteData/pullCopernicusData.ipynb
+++ b/src/SateliteData/pullCopernicusData.ipynb
@@ -42,7 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NUM_WORKERS = 8\n",
+    "NUM_WORKERS = 12\n",
+    "TABLE = 'copernicus_satelite_data'\n",
     "\n",
     "MIN_MONTH = 3\n",
     "MAX_MONTH = 12\n",
@@ -75,19 +76,19 @@
    "outputs": [],
    "source": [
     "def main():\n",
-    "    db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
-    "    queryHandler = QueryHandler()\n",
-    "    jobArgs = [] # create the list of unique jobs -> tuples inside of array\n",
-    "    count = 1\n",
+    "    db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)       # Handles connections to the database\n",
+    "    jobArgs = []                                                    # Holds tuples of arguments for pooled workers\n",
+    "    count = 1                                                       # An incrementer used to create unique file names\n",
     "\n",
-    "    conn = db.connect()\n",
-    "    createTable(db, queryHandler)   # check the tables, if necessary make a new table for the data\n",
-    "    agRegions = loadGeometry(conn)  # load the geometry from the database\n",
-    "    db.cleanup()\n",
+    "    conn = db.connect()             # Connect to the database\n",
+    "    createTable(db)                 # Check the tables, if necessary make a new table for the data\n",
+    "    agRegions = loadGeometry(conn)  # Load the agriculture region geometries from the database\n",
+    "    db.cleanup()                    # Disconnect from the database (workers maintain their own connections)\n",
     "\n",
+    "    # Creates the list of arguments (stored as tuples) used in the multiple processes for pullSateliteData(agRegions, year, month, days, outputFile)\n",
     "    for year in years:\n",
     "        for month in months:\n",
-    "            numDays = calendar.monthrange(int(year), int(month))[1]\n",
+    "            numDays = calendar.monthrange(int(year), int(month))[1] # Calculates the number of days - stored in index 1 of a tuple\n",
     "            \n",
     "            days = [str(day) for day in range(1, numDays + 1)]\n",
     "            outputFile = f'copernicus{count}'\n",
@@ -95,11 +96,10 @@
     "\n",
     "            jobArgs.append(tuple((agRegions, year, month, days, outputFile)))\n",
     "\n",
-    "            pullSateliteData(agRegions, year, month, days, outputFile)\n",
-    "            break\n",
-    "    pool = multiprocessing.Pool(NUM_WORKERS)\n",
-    "    pool.starmap(pullSateliteData, jobArgs)\n",
-    "    pool.close()"
+    "    # Handles the multiple processes\n",
+    "    pool = multiprocessing.Pool(NUM_WORKERS)    # Defines the number of workers\n",
+    "    pool.starmap(pullSateliteData, jobArgs)     # Creates the queue of jobs - pullSateliteData is the function and jobArgs holds the arguments\n",
+    "    pool.close()                                # Once these jobs are finished close the multiple processes pool"
    ]
   },
   {
@@ -108,8 +108,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check if the copernicus table exists, if it doesnt create it\n",
-    "def createTable(db: DataService, queryHandler: QueryHandler):\n",
+    "def createTable(db: DataService):\n",
+    "    queryHandler = QueryHandler()\n",
+    "\n",
+    "    # check if the copernicus table exists, if it doesnt create it\n",
     "    query = sq.text(queryHandler.tableExistsReq('copernicus_satelite_data'))\n",
     "    tableExists = queryHandler.readTableExists(db.execute(query))\n",
     "    \n",
@@ -126,11 +128,10 @@
    "source": [
     "# loads the agriculture regions from the datbase (projection is EPSG:3347)\n",
     "def loadGeometry(conn: sq.engine.Connection) -> gpd.GeoDataFrame:\n",
-    "    query = sq.text('select car_name, geometry FROM public.census_ag_regions')\n",
+    "    query = sq.text('select cr_num, geometry FROM public.census_ag_regions')\n",
     "    agRegions = gpd.GeoDataFrame.from_postgis(query, conn, crs='EPSG:3347', geom_col='geometry')\n",
     "\n",
-    "    return agRegions\n",
-    "    "
+    "    return agRegions"
    ]
   },
   {
@@ -139,40 +140,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check if the current point (lon, lat) is in any of the regions pulled from the database\n",
-    "def calcAgRegion(agRegions: gpd.GeoDataFrame, point: Point) -> typing.Tuple[int, None]:\n",
-    "    area = None   # by default it is assumed we will not find this point\n",
-    "\n",
-    "    for index, region in agRegions.iterrows():\n",
-    "        if region['geometry'].contains(point)[0]:   # for each region, check if the point is within that areas geometry\n",
-    "            area = region['cr_num']                 # found it, update the area with the new name\n",
-    "            break\n",
-    "    \n",
-    "    return area"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def storeData(df, db: DataService):\n",
-    "    queryHandler = QueryHandler()\n",
-    "\n",
+    "def addDateAttrs(df: gpd.GeoDataFrame) -> gpd.GeoDataFrame:\n",
     "    for index, data in df.iterrows():\n",
     "        date = pd.Timestamp(np.datetime64(data['time']))\n",
-    "        year = date.year\n",
-    "        month = date.month\n",
-    "        day = date.day\n",
-    "        hour = date.hour\n",
+    "        data['year'] = date.year\n",
+    "        data['month'] = date.month\n",
+    "        data['day'] = date.day\n",
+    "        data['hour'] = date.hour\n",
     "\n",
-    "        for col in df.columns:\n",
-    "            if np.ma.is_masked(data[col]):\n",
-    "                data[col] = 'NULL'\n",
-    "\n",
-    "        query = sq.text(queryHandler.createInsertRowReq(data, year, month, day, hour))\n",
-    "        db.execute(query)"
+    "    return df"
    ]
   },
   {
@@ -181,16 +157,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def addRegions(df: pd.DataFrame, agRegions: gpd.GeoDataFrame) -> pd.DataFrame:\n",
-    "    df['cr_num'] = None\n",
-    "    \n",
-    "    for index, data in df.iterrows():\n",
-    "        point = Point(data['longitude'], data['latitude'])  # creates geometry for the current point                      \n",
-    "        point = gpd.GeoSeries(point, crs='EPSG:4326')       # transforms the geometry into a geoseries and sets the projection to common (lon, lat)\n",
-    "        point = point.to_crs(crs='EPSG:3347')               # changes the points projection to match the agriculture regions\n",
-    "        data['cr_num'] = calcAgRegion(agRegions, point)     # adds coordinate region's name (or None if the region is not of interest)    \n",
-    "    \n",
-    "    df.dropna(subset=['region'], inplace=True)          # drops all rows where region is None\n",
+    "def addRegions(df: pd.DataFrame, agRegions: gpd.GeoDataFrame) -> gpd.GeoDataFrame:\n",
+    "    df = gpd.GeoDataFrame(df, crs=\"EPSG:4326\", geometry=gpd.points_from_xy(df.lon, df.lat)) # Creates geometry from df using lon and lat as cords to create points (points being geometry)\n",
+    "    df = df.to_crs(crs='EPSG:3347')                                                         # Changes the points projection to match the agriculture regions of EPSG:3347\n",
+    "    df = gpd.sjoin(df, agRegions, how='left', predicate='within')                           # Join the two dataframes based on which points fit within what agriculture regions\n",
     "\n",
     "    return df"
    ]
@@ -202,12 +172,12 @@
    "outputs": [],
    "source": [
     "def unzipFile(file: str):\n",
-    "    with zipfile.ZipFile(f'./{file}', 'r') as zip_ref:\n",
-    "        zipinfos = zip_ref.infolist()\n",
+    "    with zipfile.ZipFile(f'{file}.netcdf.zip', 'r') as zip_ref:     # Opens the zip file\n",
+    "        zipinfos = zip_ref.infolist()                               # Collects the information of each file contained within\n",
     "\n",
-    "        for zipinfo in zipinfos:\n",
-    "            zipinfo.filename = file\n",
-    "            zip_ref.extract(zipinfo)\n",
+    "        for zipinfo in zipinfos:            # For each file in the zip file (we only expect one)\n",
+    "            zipinfo.filename = file         # Changes the unzipped files name (once its unzipped of course)\n",
+    "            zip_ref.extract(zipinfo)        # Unzips the file\n",
     "            break"
    ]
   },
@@ -217,11 +187,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def readNetCDF(file: str) -> pd.DataFrame:\n",
-    "    dataset = xr.open_dataset(file)\n",
-    "    df = dataset.to_dataframe().reset_index()\n",
+    "    dataset = xr.open_dataset(file)             # Loads the dataset from the netcdf file\n",
+    "    df = dataset.to_dataframe().reset_index()   # Converts the contents into a dataframe and corrects indexes \n",
     "\n",
     "    return df"
    ]
@@ -232,7 +200,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def renameCols(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "def formatDF(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # Adds the remaining attributes we want to store which will be gathered during data preprocessing\n",
+    "    df['cr_num'] = None\n",
+    "    df['year'] = None\n",
+    "    df['month'] = None\n",
+    "    df['day'] = None\n",
+    "    df['hour'] = None\n",
+    "\n",
+    "    # Renames the dataframes columns so it can be matched when its posted to the database\n",
+    "    df.rename(columns={df.columns[0]: 'lon'}, inplace=True)\n",
+    "    df.rename(columns={df.columns[1]: 'lat'}, inplace=True)\n",
+    "    df.rename(columns={df.columns[2]: 'datetime'}, inplace=True)\n",
     "    df.rename(columns={df.columns[3]: 'dewpoint_temperature'}, inplace=True)\n",
     "    df.rename(columns={df.columns[4]: 'temperature'}, inplace=True)\n",
     "    df.rename(columns={df.columns[5]: 'evaporation_from_bare_soil'}, inplace=True)\n",
@@ -250,6 +229,15 @@
     "    df.rename(columns={df.columns[17]: 'volumetric_soil_water_layer_3'}, inplace=True)\n",
     "    df.rename(columns={df.columns[18]: 'volumetric_soil_water_layer_4'}, inplace=True)\n",
     "\n",
+    "    # Used to detect null values - na.mask, null etc... will be replaced with nan which get removed immediately after\n",
+    "    df[['lon', 'lat', 'dewpoint_temperature', 'temperature', 'evaporation_from_bare_soil', 'skin_reservoir_content', 'skin_temperature', 'snowmelt', 'soil_temperature_level_1',\n",
+    "        'soil_temperature_level_2', 'soil_temperature_level_3', 'soil_temperature_level_4', 'surface_net_solar_radiation', 'surface_pressure', 'volumetric_soil_water_layer_1',\n",
+    "        'volumetric_soil_water_layer_2', 'volumetric_soil_water_layer_3', 'volumetric_soil_water_layer_4']] = df[['lon', 'lat', 'dewpoint_temperature', 'temperature', 'evaporation_from_bare_soil', 'skin_reservoir_content', 'skin_temperature', 'snowmelt', 'soil_temperature_level_1',\n",
+    "        'soil_temperature_level_2', 'soil_temperature_level_3', 'soil_temperature_level_4', 'surface_net_solar_radiation', 'surface_pressure', 'volumetric_soil_water_layer_1',\n",
+    "        'volumetric_soil_water_layer_2', 'volumetric_soil_water_layer_3', 'volumetric_soil_water_layer_4']].astype(float)\n",
+    "\n",
+    "    df = df.replace(np.nan, None)\n",
+    "\n",
     "    return df"
    ]
   },
@@ -261,8 +249,9 @@
    "source": [
     "def pullSateliteData(agRegions: gpd.GeoDataFrame, year: str, month : str, days: list, outputFile: str):\n",
     "    db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
+    "    conn = db.connect()\n",
     "    c = cdsapi.Client()\n",
-    "    \n",
+    "\n",
     "    print(f'Starting to pull data for {year}/{month}')\n",
     "    c.retrieve(\n",
     "        'reanalysis-era5-land',\n",
@@ -278,12 +267,14 @@
     "        f'{outputFile}.netcdf.zip'\n",
     "    )\n",
     "\n",
-    "    unzipFile(outputFile)   # unzips the file, renames it to outputFile and then deletes the source .zip file\n",
+    "    unzipFile(outputFile)   # Unzips the file, renames it to outputFile and then deletes the source .zip file\n",
     "    \n",
-    "    df = readNetCDF(f'{outputFile}.nc')     # converts the netcdf content into a dataframe\n",
-    "    df = renameCols(df)                     # renames the columns according to their attribute\n",
-    "    df = addRegions(df, agRegions)          # adds regions to all coordinates (data without an associated region is dropped)\n",
-    "    storeData(df, db)\n",
+    "    df = readNetCDF(f'{outputFile}.nc') # Converts the netcdf content into a dataframe\n",
+    "    df = formatDF(df)                   # Formats the data frame to process null values, add additional attributes and rename columns \n",
+    "    df = addRegions(df, agRegions)      # Links data to their crop district number (stored in cr_num)\n",
+    "    df = addDateAttrs(df)               # Breaks down the date attributes into its components and saves them for storage\n",
+    "    \n",
+    "    df.to_sql(TABLE, conn, schema='public', if_exists='append', index=False)\n",
     "\n",
     "    # Clean up the environment after the transaction\n",
     "    os.remove(f'{outputFile}.netcdf.zip')\n",
