--- a/src/SateliteData/pullCopernicusData.ipynb
+++ b/src/SateliteData/pullCopernicusData.ipynb
@@ -14,9 +14,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, sys, cdsapi, typing, zipfile, calendar, multiprocessing\n",
+    "import os, sys, cdsapi, zipfile, calendar, multiprocessing\n",
     "from QueryHandler import QueryHandler\n",
-    "from shapely.geometry import Point\n",
     "from dotenv import load_dotenv\n",
     "import sqlalchemy as sq \n",
     "import geopandas as gpd\n",
