--- a/src/WeatherStation/Files/deriveDaily.ipynb
+++ b/src/WeatherStation/Files/deriveDaily.ipynb
@@ -119,7 +119,7 @@
      "output_type": "error",
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
+      "\u001B[1;31mSystemExit\u001B[0m\u001B[1;31m:\u001B[0m 0\n"
      ]
     },
     {
